2012-08-10  Peter Schueller  <ps@kr.tuwien.ac.at>

	* generator/: renamed to mlp-generator/ as this directory is only
	relevant for MLPs.
	* mlp-generator/: Likewise.

2012-08-10  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* README: Update libclingo version.

	* AUTHORS: Add Christoph Redl.

2012-08-02 Christoph Redl   <redl@kr.tuwien.ac.at>

	* AggregatePlugin.h: Implement first version of a new (internal)
	plugin as an extension of the existing aggregate-plugin.
	It realizes possibly nested DLV aggregates
	(using the usual syntax) by a rewriting to external atoms;
	this allows for using DLV aggregates also with clasp and internal
	solver backend
	* AggregatePlugin.cpp: Likewise

2012-06-30 Christoph Redl   <redl@kr.tuwien.ac.at>

	* FLPModelGeneratorBase.h: Implement relaxed notion of strong
	safety; see option --autostrongsafety
	* FLPModelGeneratorBase.tcc: Likewise
	* FLPModelGeneratorBase.cpp: Likewise
	* GenuineGuessAndCheckModelGenerator.h: Likewise
	* GenuineGuessAndCheckModelGenerator.cpp: Likewise
	* GuessAndCheckModelGenerator.h: Likewise
	* GuessAndCheckModelGenerator.cpp: Likewise
	* dlvhex.cpp: Likewise

2012-06-17  Peter Schueller  <ps@kr.tuwien.ac.at>

	* checkout_build_potassco.sh: Added script to checkout and build
	parts of potassco such that it can be used by dlvhex.
	* src/Logger.cpp: Fixed problem of NDEBUG dlvhex vs DEBUG plugin
	builds, now the worst thing that happens is a warning and possibly
	slightly reduced performance in the plugin.

2012-05-31 Christoph Redl   <redl@kr.tuwien.ac.at>

	* ID.h: Introduce a property for external atom input auxiliaries
	* Registry.h: Likewise
	* Registry.cpp: Likewise
	* DependencyGraph.cpp: Likewise
	* FLPModelGeneratorBase.cpp: Modify explicit FLP check
	such that EA input rules are _not_ shifted
	* UnfoundedSetChecker.cpp: Split program for UFS checking into
	strongly connected components;
	Implement "negative external learning" for UFS check
	* UnfoundedSetChecker.h: Likewise